tests/baselines/reference/noUnusedLocals_writeOnlyProperty_dynamicNames.errors.txt
noUnusedLocals_writeOnlyProperty_dynamicNames.ts(4,13): error TS6133: '[x]' is declared but its value is never read.


==== noUnusedLocals_writeOnlyProperty_dynamicNames.ts (1 errors) ====
    const x = Symbol("x");
    const y = Symbol("y");
    class C {
        private [x]: number;
                ~~~
!!! error TS6133: '[x]' is declared but its value is never read.
        private [y]: number;
        m() {
            this[x] = 0; // write-only
            this[y];
        }
    }
    